feat: use pydantic models for data types and validation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,12 @@ name = ""
 version = "0.1.0"
 description = ""
 authors = [{ name = "Hju Kneyck Flores", email = "hjucode@gmail.com" }]
-dependencies = ["websocket-client>=1.6.1", "rel>=0.4.9", "python-dotenv>=1.0.0"]
+dependencies = [
+    "websocket-client>=1.6.1",
+    "rel>=0.4.9",
+    "python-dotenv>=1.0.0",
+    "pydantic>=2.0",
+]
 requires-python = ">=3.11"
 license = { text = "MIT" }
 
